# rust-todo

./: .env  Cargo.toml  diesel.toml
migrations/2024-09-24-025018_create_todos/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
